fix spacing again

--- a/streamstyle.css
+++ b/streamstyle.css
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin: 50px 20px 50px 20px;
+  margin: 50px 5px 50px 5px;
   overflow-x: hidden;
 }
 
